samples/_failures_safe/1761617083_4f5b63_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4df8ccb7.c: In function ‘main’:
./samples/SAFE/__tmp_4df8ccb7.c:138:13: error: expected declaration or statement at end of input
  138 |             return 1;
      |             ^~~~~~
./samples/SAFE/__tmp_4df8ccb7.c:138:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4df8ccb7.c:138:13: error: expected declaration or statement at end of input
